--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@headlessui/vue": "^1.7.9",
     "@heroicons/vue": "^2.0.14",
     "@maxmind/geoip2-node": "^3.5.0",
-    "@nuxtjs/i18n": "^8.0.0-beta.9",
+    "@nuxtjs/i18n": "^8.0.0-beta.13",
     "@nuxtjs/tailwindcss": "^6.3.1",
     "@simpleanalytics/common": "^1.3.57",
     "@tailwindcss/forms": "^0.5.3",
@@ -22,6 +22,7 @@
     "nuxt": "^3.1.2",
     "nuxt-runtime-compiler": "^1.2.2",
     "nuxt-schema-org": "^2.1.1",
+    "nuxt-simple-sitemap": "^3.0.15",
     "postcss-hover-media-feature": "^1.0.2",
     "qs": "^6.11.0",
     "simple-analytics-vue": "^3.0.1"
